# Atrophy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  built-with-atrophy.md  index.html  pyproject.toml
.agent/rules/: atrophy.md
.agent/skills/atrophy-dev/: SKILL.md
.github/workflows/: atrophy-pr-report.yml
atrophy/: __init__.py  config.py  exceptions.py
atrophy/cli/: __init__.py  app.py  onboarding.py  output.py
atrophy/core/: __init__.py  ai_detector.py  challenge_engine.py  context_builder.py  git_scanner.py  skill_classifier.py  skill_mapper.py  storage.py  tree_sitter_analyzer.py
atrophy/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
atrophy/tui/: __init__.py  dashboard.py
tests/: __init__.py  conftest.py  test_ai_detector.py  test_challenge_engine.py  test_cli.py  test_config.py  test_git_scanner.py  test_skill_mapper.py  test_storage.py
